# frappe_whatsapp_waha

./: Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: index.html
frappe_whatsapp_waha/: __init__.py  api.py  hooks.py  install.py  modules.txt  patches.txt
frappe_whatsapp_waha/frappe_whatsapp_waha/doctype/bulk_whatsapp_message/: bulk_whatsapp_message.js  bulk_whatsapp_message.json  bulk_whatsapp_message.py  test_bulk_whatsapp_message.py
frappe_whatsapp_waha/frappe_whatsapp_waha/doctype/whatsapp_message/: test_whatsapp_message.py  whatsapp_message.js  whatsapp_message.json  whatsapp_message.py
frappe_whatsapp_waha/frappe_whatsapp_waha/doctype/whatsapp_message_fields/: whatsapp_message_fields.json  whatsapp_message_fields.py
frappe_whatsapp_waha/frappe_whatsapp_waha/doctype/whatsapp_notification/: test_whatsapp_notification.py  whatsapp_notification.js  whatsapp_notification.json  whatsapp_notification.py
frappe_whatsapp_waha/frappe_whatsapp_waha/doctype/whatsapp_notification_log/: test_whatsapp_notification_log.py  whatsapp_notification_log.js  whatsapp_notification_log.json  whatsapp_notification_log.py
frappe_whatsapp_waha/frappe_whatsapp_waha/utils/: __init__.py  waha_client.py
frappe_whatsapp_waha/patches/: rename_module_def.py  use_intl_tel_input_for_contact_phone.py
frappe_whatsapp_waha/public/css/: intl_tel_input.css
frappe_whatsapp_waha/public/js/: contact.js  frappe_whatsapp_waha.js
frappe_whatsapp_waha/public/js/controls/: intl_tel_input.js
frappe_whatsapp_waha/utils/: waha_webhook.py  webhook.py
(+14 files in other folders)
