[project]
name = "frappe_whatsapp_waha"
authors = [
    { name = "djs4000", email = "djs4000@gmail.com"}
]
description = "WhatsApp integration for Frappe using the WAHA API. Forked from shridarpatil/frappe_whatsapp."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "python-magic~=0.4.24",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.bench.frappe-dependencies]
frappe = ">=14.0.0"
